--- a/src/index.html
+++ b/src/index.html
@@ -24,16 +24,16 @@
                 <div class="difficulty-text">
                     <h2>Select the difficulty</h2>
                 </div>
-                <button id="easy" class="btn btn-difficulty">
+                <button id="easy" class="btn btn-primary btn-difficulty">
                     Easy
                 </button>
-                <button id="medium" class="btn btn-difficulty">
+                <button id="medium" class="btn btn-primary btn-difficulty">
                     Medium
                 </button>
-                <button id="hard" class="btn btn-difficulty">
+                <button id="hard" class="btn btn-primary btn-difficulty">
                     Hard
                 </button>
-                <button id="custom" class="btn btn-difficulty">
+                <button id="custom" class="btn btn-primary btn-difficulty">
                     Custom
                 </button>
             </div>
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="text-align-center">
-                    <button type="submit" class="btn custom-difficulty-next">Next</button>
+                    <button type="submit" class="btn btn-primary custom-difficulty-next">Next</button>
                 </div>
 
                 <div class="text-box-custom horizontal-center-absolute">
@@ -62,7 +62,7 @@
             </div>
 
             <div class="support-previous-button">
-                <div class="btn-secondary btn-previous">Back</div>
+                <div class="btn btn-secondary btn-previous">Back</div>
             </div>
         </div>
 
@@ -70,7 +70,7 @@
 
         <div id="game-area" class="hidden default-box game-box-grid">
             <div class="text-box">
-                <p class="message-text">Press start or spacebar to begin the game</p>
+                <p class="message-text text-align-center">Press start or spacebar to begin the game</p>
             </div>
 
             <div class="memory-block-and-start">
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="center-flex--horizontal">
-                    <button id="start-game" class="btn start-game">
+                    <button id="start-game" class="btn btn-primary start-game">
                         Start
                     </button>
                 </div>
@@ -87,7 +87,7 @@
             <div class="bottom-area">
 
                 <div class="support-quit-button">
-                    <button class="btn-secondary btn-quit">Quit</button>
+                    <button class="btn btn-secondary btn-quit">Quit</button>
                 </div>
 
                 <div class="scores">
