--- a/src/index.html
+++ b/src/index.html
@@ -24,18 +24,20 @@
                 <div class="difficulty-text">
                     <h2>Select the difficulty</h2>
                 </div>
-                <button id="easy" class="btn btn-primary btn-difficulty">
-                    Easy
-                </button>
-                <button id="medium" class="btn btn-primary btn-difficulty">
-                    Medium
-                </button>
-                <button id="hard" class="btn btn-primary btn-difficulty">
-                    Hard
-                </button>
-                <button id="custom" class="btn btn-primary btn-difficulty">
-                    Custom
-                </button>
+                <div class="difficulty-buttons center-flex wrap-flex">
+                    <button id="easy" class="btn btn-primary btn-difficulty">
+                        Easy
+                    </button>
+                    <button id="medium" class="btn btn-primary btn-difficulty">
+                        Medium
+                    </button>
+                    <button id="hard" class="btn btn-primary btn-difficulty">
+                        Hard
+                    </button>
+                    <button id="custom" class="btn btn-primary btn-difficulty">
+                        Custom
+                    </button>
+                </div>
             </div>
         </div>
 
@@ -44,7 +46,7 @@
 
             <div class="select-tiles-area">
                 <div class="custom-difficulty-text">
-                    <h2>Choose the amount of tiles</h2>
+                    <h2 class="text-align-center">Choose the amount of tiles</h2>
                 </div>
 
                 <div class="center-flex">
