--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
     </div>
     </div>
 
-    <script src="javascript/script.js"></script>
+    <script type="module" src="javascript/script.js"></script>
 </body>
 
 </html>
