fix paragraph bug

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
 
         <div id="game-area" class="hidden default-box game-box-grid">
             <div class="text-box">
-                <p class="message-text text-align-center">Press start or spacebar to begin the game</p>
+                <p class="message-text text-align-center">Press start to begin the game</p>
             </div>
 
             <div class="memory-block-and-start">
